crates/wac-parser/tests/resolution/fail/mismatched-func-param-type/foo/bar.wat
(component
  (instance (import "x")
    (export "r" (type (sub resource)))
    (type $own-r (borrow 0))
    (export "f" (func (param "r" $own-r)))
  )
)
